--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,3 @@
 <h2>Welcome to Pizza Shop!</h2>
-<button class="btn btn-primary" onClick="something()">Click me</button>
+<button class="btn btn-primary btn-lg" onClick="something()">Click me</button>
 
