--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,11 @@
 <h2>Welcome to Pizza Shop!</h2>
+
+<% @products.each do |p| %>
+<p>
+	product
+</p>
+<% end %>
+
 <button class="btn btn-primary btn-lg" onClick="something()">Click me</button>
+
 
