--- a/views/index.erb
+++ b/views/index.erb
@@ -4,11 +4,24 @@
 
 	<% @products.each do |p| %>
 	<div class="col-md-3">
-		<%= p.title %>
+		<div>
+			<%= p.title %>
+		</div>
+
+		<div>
+			<img src="<%= p.path_to_image %>" />
+		</div>
+
+		<div>
+			<%= p.description %>
+		</div>
+
 	</div>
 	<% end %>
 
 </div>
+<br />
+<br />
 
 <button class="btn btn-primary btn-lg" onClick="something()">Click me</button>
 
