--- a/views/index.erb
+++ b/views/index.erb
@@ -24,6 +24,11 @@
 			Price: <%= p.price %> rub
 		</div>
 
+		<div>
+			<button class="btn btn-sm btn-success">Add to cart</button>
+		</div>
+
+
 	</div>
 	<% end %>
 
