--- a/views/index.erb
+++ b/views/index.erb
@@ -25,7 +25,7 @@
 		</div>
 
 		<div>
-			<button class="btn btn-sm btn-success">Add to cart</button>
+			<button class="btn btn-sm btn-success" onClick="add_to_cart()">Add to cart</button>
 		</div>
 
 
