--- a/views/layout.erb
+++ b/views/layout.erb
@@ -40,7 +40,7 @@
 			    <ul class="nav navbar-nav navbar-right">
         		<li>
         			<form action="/cart" method="POST">
-        			<input name="orders" type="text" />
+        			<input id="orders_input" name="orders" type="text" />
         			<input type="submit" class="btn btn-primary btn-lg" value="Cart (...)" />
         			</form>
         		</li>
