--- a/views/index.erb
+++ b/views/index.erb
@@ -38,4 +38,14 @@
 
 <button class="btn btn-primary btn-lg" onClick="something()">Click me</button>
 
+<script type="text/javascript">
+
+$(function() {
+	
+	update_orders_input();
+
+});
+
+</script>
+
 
