--- a/views/layout.erb
+++ b/views/layout.erb
@@ -57,6 +57,18 @@
 
 	</div>
 
+	<script type="text/javascript">
+
+		$(function() {
+
+		update_orders_input();
+		update_orders_button();
+
+		});
+
+	</script>
+
+
 
    
   </body>
