--- a/views/cart.erb
+++ b/views/cart.erb
@@ -1,3 +1,24 @@
 <h2>Your cart</h2>
 
-<%= @items.inspect %>
+
+<table class="table table-striped">
+ 	<thead>
+  		<tr>
+   			<th>Name</th>
+    		<th>Price</th>
+      		<th>Qty</th>
+      	 </tr>
+       </thead>
+        <tbody>
+
+        <% @items.each do |item| %>
+          <tr>
+           	<th scope="row">1</th>
+            <td><%= item[0].title %></td>
+            <td><%= item[0].price %></td> 
+            <td><%= item[1] %></td>
+           </tr>
+        <% end %>
+ 
+        </tbody>
+</table>
