--- a/views/cart.erb
+++ b/views/cart.erb
@@ -54,5 +54,6 @@
   </div>
 
     <button type="submit" class="btn btn-success btn-lg">Place this order</button>
+    <button class="btn btn-danger btn-lg" onClick="return cancel_order()">Cancel</button>
 
   </form>
