--- a/views/cart.erb
+++ b/views/cart.erb
@@ -1,59 +1,60 @@
 <h2>Your cart</h2>
 
+<div id="cart">
+  <table class="table table-striped">
+   	<thead>
+    		<tr>
+     			<th>Name</th>
+      		<th>Price</th>
+        		<th>Qty</th>
+        	 </tr>
+         </thead>
+          <tbody>
 
-<table class="table table-striped">
- 	<thead>
-  		<tr>
-   			<th>Name</th>
-    		<th>Price</th>
-      		<th>Qty</th>
-      	 </tr>
-       </thead>
-        <tbody>
+          <% total_price = 0 %>
+          <% total_qty = 0 %>
+          <% @items.each do |item| %>
+            
+          	<tr>
+              <td><%= item[0].title %></td>
+              <td><%= item[0].price %></td> 
+              <td><%= item[1] %></td>
+             </tr>
+             <% total_price += item[0].price * item[1].to_i %>
+             <% total_qty += item[1].to_i %>
+          <% end %>
 
-        <% total_price = 0 %>
-        <% total_qty = 0 %>
-        <% @items.each do |item| %>
-          
-        	<tr>
-            <td><%= item[0].title %></td>
-            <td><%= item[0].price %></td> 
-            <td><%= item[1] %></td>
+          <tr>
+          	
+              <td></td>
+              <td>Total: <%= total_price %> Rub</td> 
+              <td><%= total_qty %></td>
            </tr>
-           <% total_price += item[0].price * item[1].to_i %>
-           <% total_qty += item[1].to_i %>
-        <% end %>
+   
+          </tbody>
+  </table>
 
-        <tr>
-        	
-            <td></td>
-            <td>Total: <%= total_price %> Rub</td> 
-            <td><%= total_qty %></td>
-         </tr>
- 
-        </tbody>
-</table>
+  <form action="/place_order" method="POST" role="form">
 
-<form action="/place_order" method="POST" role="form">
+  	<input name="order[orders_input]" type="hidden" value="<%= @orders_input %>" />
 
-	<input name="order[orders_input]" type="hidden" value="<%= @orders_input %>" />
+    <div class="form-group">
+      <label>Name:</label>
+      <input name="order[name]" type="text" class="form-control" placeholder="Your name">
+    </div>
 
-  <div class="form-group">
-    <label>Name:</label>
-    <input name="order[name]" type="text" class="form-control" placeholder="Your name">
+    <div class="form-group">
+      <label>Phone:</label>
+      <input name="order[phone]" type="text" class="form-control" placeholder="Your phone">
+    </div>
+
+    <div class="form-group">
+      <label>Delivery address</label>
+      <textarea name="order[address]" type="text" class="form-control" placeholder="Delivery address"></textarea>
+    </div>
+
+      <button type="submit" class="btn btn-success btn-lg">Place this order</button>
+      <button class="btn btn-danger btn-lg" onClick="return cancel_order()">Cancel</button>
+
+    </form>
   </div>
-
-  <div class="form-group">
-    <label>Phone:</label>
-    <input name="order[phone]" type="text" class="form-control" placeholder="Your phone">
-  </div>
-
-  <div class="form-group">
-    <label>Delivery address</label>
-    <textarea name="order[address]" type="text" class="form-control" placeholder="Delivery address"></textarea>
-  </div>
-
-    <button type="submit" class="btn btn-success btn-lg">Place this order</button>
-    <button class="btn btn-danger btn-lg" onClick="return cancel_order()">Cancel</button>
-
-  </form>
